architecture_samples/v3/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod-demo
  labels:
    istio-injection: enabled
